--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,29 @@
 h1{
     background-color: red;
 }
+.container{
+width: 90%;
+margin: 0 auto;
+}
+.form{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+.form_img img{
+width: 300px;
+height: 300px;
+object-fit: cover;
+object-position: center;
+border-radius: 10px;
+}
+.form_group, .form_img{
+width: 100%;
+text-align: center;
+margin-bottom: 20px;
+}
+.form_group label{
+    display: block;
+    margin-bottom: 10px;
+}
