--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,49 @@
+/*Modal*/
+.popup-fade {
+	display: none;
+    cursor: pointer;
+}
+.popup-fade:before {
+	content: '';
+	background: #000;
+	position: fixed; 
+	left: 0;
+	top: 0;
+	width: 100%; 
+	height: 100%;
+	opacity: 0.7;
+	z-index: 4;
+}
+.popup {
+	position: fixed;
+	top: 20%;
+	left: 50%;
+	padding: 20px;
+	width: 360px;
+	margin-left: -200px;	
+	background: #fff;
+	border: 1px solid orange;
+	border-radius: 4px; 
+    font-size: 20px;
+	z-index:5;
+	opacity: 1;	
+}
+.popup-close {
+    font-size: 20px;
+	position: absolute;
+	top: 10px;
+	right: 10px;
+}
+
+/*Main styles*/
+body{
+    margin: 0;
+}
 h1{
-    background-color: red;
+    margin-top: 0;
+   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+   text-align: center;
+   font-size: 30px;
 }
 .container{
 width: 90%;
@@ -13,7 +57,7 @@ margin: 0 auto;
 }
 .form_img img{
 width: 300px;
-height: 300px;
+height: 200px;
 object-fit: cover;
 object-position: center;
 border-radius: 10px;
@@ -21,7 +65,7 @@ border-radius: 10px;
 .form_group, .form_img{
 width: 100%;
 text-align: center;
-margin-bottom: 20px;
+margin-bottom: 10px;
 }
 .form_group label{
     display: block;
